crates/shingetsu-compiler/tests/compile_fail/enum_multi_field.rs
use shingetsu::FromLua;

#[derive(FromLua)]
enum Bad {
    Multi(i64, String),
    Str(bytes::Bytes),
}

fn main() {}
